# GameBlocker

./: index.html  package-lock.json  package.json  render.yaml
.github/workflows/: build.yml
data/blocklists/: ai-services.txt  gaming-domains.txt  gaming-processes.txt
releases/: HOW_TO_USE.txt  WHATSAPP_ANNOUNCEMENT.txt
releases/linux/: README.txt
releases/macos/: README.txt
releases/windows/: README.txt
scripts/: copy-builds-to-website.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/blocking/: blocklists.rs  browser.rs  hosts.rs  mod.rs
src-tauri/src/blocking/network/: dns_proxy.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/blocking/process/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/commands/: auth.rs  blocking.rs  blocklist.rs  daemon.rs  license.rs  mod.rs  schedule.rs
src-tauri/src/config/: storage.rs
src-tauri/src/daemon/: client.rs  ipc.rs  linux.rs  macos.rs  mod.rs  runner.rs  service.rs  windows.rs
src-tauri/src/scheduler/: engine.rs
src-tauri/src/security/: crypto.rs  master_password.rs  mod.rs  uninstall_protection.rs
src/components/: SubscriptionLockScreen.tsx  TitleBar.tsx  WindowControls.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  switch.tsx
src/pages/: Activity.tsx  Alerts.tsx  Blocklist.tsx  Dashboard.tsx  FirstRun.tsx  LockScreen.tsx  Schedule.tsx  Settings.tsx
src/services/: api.ts
src/stores/: activity-store.ts  auth-store.ts  blocking-store.ts  daemon-store.ts  schedule-store.ts  theme-store.ts
website/: .env  app.py  requirements.txt
website/app/: __init__.py  config.py  main.py
website/app/db/: database.py
website/frontend/: next.config.ts  package-lock.json  package.json
website/templates/: base.html  index.html  privacy.html  success.html  support.html  terms.html
(+103 files in other folders)
